legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__facename2_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 210.00mm x 297.00mm



ko바탕 en바탕 cn바탕 jp바탕 other바탕 symbol바탕 user바탕

ko한컴돋움 en바탕 cn바탕 jp바탕 other바탕 symbol바탕 user바탕

ko바탕 enTimesNewRoman cn바탕 jp바탕 other바탕 symbol바탕 user바탕

ko바탕 enArial cn바탕 jp바탕 other바탕 symbol바탕 user바탕

ko바탕 en바탕 cn약자漢字 jp바탕 other바탕 symbol바탕 user바탕

ko바탕 en바탕 cn간자漢字 jp바탕 other바탕 symbol바탕 user바탕

ko바탕 en바탕 cn바탕 jp명조あ other바탕 symbol바탕 user바탕

ko바탕 en바탕 cn바탕 jp고딕あ other바탕 symbol바탕 user바탕
