legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__footnote_endnote_hwpx_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**버전**: 10, 0, 0, 5060 WIN32LEWindows_8



[^1] [^2] [^1] [^2]



## 각주



[^1]각주입니다.

[^2]각주 두 번째입니다.



## 미주



[^1]미주입니다.

[^2]미주 두 번째입니다.
