legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__footnote_endnote_with_prefix_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<p><span style="font-size: 10.0pt; font-family: '바탕'">각주참조</span><sup><a href="#fn-1" id="fnref-1">[1]</a></sup><sup><a href="#fn-2" id="fnref-2">[2]</a></sup></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">미주참조</span><sup><a href="#en-1" id="enref-1">[e1]</a></sup><sup><a href="#en-2" id="enref-2">[e2]</a></sup></p>
</div>
<section class="hwp-footnotes">
<div id="fn-1" class="hwp-footnote"><a href="#fnref-1">↩</a> <p style="line-height: 130%; text-indent: -26.2pt"><span style="font-size: 9.0pt; font-family: '바탕'"> 각주입니다.</span></p></div>
<div id="fn-2" class="hwp-footnote"><a href="#fnref-2">↩</a> <p style="line-height: 130%; text-indent: -26.2pt"><span style="font-size: 9.0pt; font-family: '바탕'"> 각주 두 번째입니다.</span></p></div>
</section>
<section class="hwp-endnotes">
<div id="en-1" class="hwp-endnote"><a href="#enref-1">↩</a> <p><span style="font-size: 10.0pt; font-family: '바탕'"> 미주입니다.</span></p></div>
<div id="en-2" class="hwp-endnote"><a href="#enref-2">↩</a> <p><span style="font-size: 10.0pt; font-family: '바탕'"> 미주 두 번째입니다.</span></p></div>
</section>
