legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__issue144_fields_crossing_lineseg_boundary_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 210.00mm x 297.00mm



[google google google google google google](http://google.com)

gmail gmail gmail gmail gmail gmail

gmaile
