legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__linespacing_hwpx_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**버전**: 10, 0, 0, 5060 WIN32LEWindows_8



|HHHHHHHHHHHHHH

|HHHHHHHHHHHHHH

|H 글자에 따라 150%

|HHHHHHHHHHHHHH

|H 고정 값 15pt

|HHHHHHHHHHHHHH

|H 여백만 지정 5pt

|HHHHHHHHHHHHHH

|H 글자에 따라 100%

|HHHHHHHHHHHHHH

|H 고정 값 10pt

|HHHHHHHHHHHHHH

|H 여백만 지정 0pt

|HHHHHHHHHHHHHH

|H 글자에 따라 200%

|HHHHHHHHHHHHHH

|H 고정 값 20pt

|HHHHHHHHHHHHHH

|H 여백만 지정 10pt

|HHHHHHHHHHHHHH

|H 글자에 따라 100%

|HHHHHHHHHHHHHH

|H 고정 값 0pt

|HHHHHHHHHHHHHH

|H 여백만 지정 0pt

|HHHHHHHHHHHHHH
