legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__lists_bullet_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 210.00mm x 297.00mm



글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표

- 1

- 2

- 3

글머리표 사용자정의 ☀

- 너비 10pt

- 정렬 가운데

- 본문과의 간격 50%

- 자동 내어쓰기

- 글자모양 없음

글머리표 사용자정의 ☀

- 너비 10pt

- 정렬 오른쪽

- 본문과의 간격 50%

- 자동 내어쓰기

- 글자모양 없음

글머리표 사용자정의 ☀

- 너비 20pt

- 정렬 왼쪽

- 본문과의 간격 50%

- 자동 내어쓰기

- 글자모양 없음

글머리표 사용자정의 ☀

- 너비 10pt

- 정렬 왼쪽

- 본문과의 간격 0%

- 자동 내어쓰기

- 글자모양 없음

글머리표 사용자정의 ☀

- 너비 10pt

- 정렬 왼쪽

- 본문과의 간격 0%

- 자동 내어쓰기 X

- 글자모양 없음

글머리표 사용자정의 ☀

- 너비 10pt

- 정렬 왼쪽

- 본문과의 간격 0%

- 자동 내어쓰기 X

- 새 글머리표 모양: sun
